--- a/views/results.erb
+++ b/views/results.erb
@@ -7,26 +7,36 @@
   </head>
   
   <body background = "http://u.kanobu.ru/comments/images/92025b04-c980-46da-8859-66f64c997468.jpg">
-  <h1 class = "text"> Quick Quotes </h1>
+    <h1 class = "text"> Quick Quotes </h1>
 <!--   <h2> Topic: <%=@topics%> </h2>
-  <h2> Person: <%=@people%> </h2> -->
-    
-    
-  <table style="width:100%">
-    <tr>
-      <h2> Quote                              Author </h2> 
-      <td>Jill</td>
-      <td>Smith</td>		
-    </tr>
-    <tr>
-      <td>Eve</td>
-      <td>Jackson</td>		
-    </tr>
-    <tr>
-      <td>John</td>
-      <td>Doe</td>		
-    </tr>
-  </table>
-    
+  <h2> Person: <%=@people%> </h2>
+     -->
+    <center><table border = 1 style="width:80%">
+      <tr>
+        <th>Quote</th>
+        <th>Author</th> 
+      </tr>
+      <tr>
+        <td>Quote</td>
+        <td>Author</td>		
+      </tr>
+      <tr>
+        <td>Quote</td>
+        <td>Author</td>		
+      </tr>
+      <tr>
+        <td>Quote</td>
+        <td>Author</td>		
+      </tr>
+       <tr>
+        <td>Quote</td>
+        <td>Author</td>		
+      </tr>
+       <tr>
+        <td>Quote</td>
+        <td>Author</td>		
+      </tr>
+      </table></center>
+    <a href="http://ey100101-pc-15-precollege-se1-nyfl-070615-2-110751.nitrousapp.com:9393/"><h3> &lt&lt Search again </h3></a>
   </body>
 </html>
