--- a/views/index.erb
+++ b/views/index.erb
@@ -11,20 +11,22 @@
     <h1 class = "text"> Quick Quotes </h1>
    
     <form action = "/results" method = "post">
-    <select name="topics">
-      <option value = "Topic"> TOPIC </option>
-      <option value="Life">life</option>
-      <option value="Sad">sad</option>
-      <option value="Motivational">motivational</option>
-      <option value="Education">audi</option>
+    <select name="topics" class = "drop">
+      <option selected="true" style="display:none;">Select topic</option>
+      <option value="Life">Life</option>
+      <option value="Sad"> Sad</option>
+      <option value="Motivational"> Motivational</option>
+      <option value="Education"> Education </option>
+      <option value="none"> none </option>
       </select>
     
-    <select name="people">
-      <option value = "people"> PEOPLE </option>
+    <select name="people" class = drop>
+      <option selected="true" style="display:none;">Select author</option>
       <option value="Albert Einstein">Albert Einstein</option>
       <option value="John F. Kennedy"> John F. Kennedy</option>
       <option value="Confucius">Confucius</option>
       <option value="Mahatma Gandhi">Mahatma Gandhi</option>
+      <option value="none"> none </option>
       </select>
   
     <input type="submit" value="Submit">
