final update: day 1

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,8 @@
     <title> Quick Quotes </title>
     <link rel = "stylesheet" type = "text/css" href = "../style.css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" href="https://cdn2.iconfinder.com/data/icons/aspneticons_v1.0_Nov2006/edit_16x16.gif">
+
   </head> 
   
   <body>
