contact form html and css

--- a/imagelink.erb
+++ b/imagelink.erb
@@ -7,6 +7,7 @@
     <h1> <font size = "5"> <center> Quick Quotes </center> </font> </h1>  
       <h2> Click on the emoji that corresponds with the mood of the quote you desire </h2> 
         <p> Find a quote! </p>  
- <a href= "http://www.brainyquote.com/quotes/topics/topic_happiness.html"><img src="http://emojipedia.org/wp-content/uploads/2013/07/160x160x1-smiling-face-with-open-mouth-and-smiling-eyes.png.pagespeed.ic.VK_Yv8Q2S4.jpg"> </a> 
-      </body> 
- </html> 
+ <a href= "http://www.brainyquote.com/quotes/topics/topic_happiness.html"> <img src="http://emojipedia.org/wp-content/uploads/2013/07/160x160x1-smiling-face-with-open-mouth-and-smiling-eyes.png.pagespeed.ic.VK_Yv8Q2S4.jpg"> </a>
+    <a href= ""> <img src=""> </a>
+  </body> 
+ </html>
